created basic files for handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,28 @@
-<div id="home">
+  <!-- All Discussion Groups -->
   <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+    <div class="section">
+
+      <!--   Discussion Card   -->
+      <a href="club/{{this.id}}">
+      <div class="container discussion">
+        <div class="row">
+          <div class="col l1 s1 offset-1 film-strip"></div>
+          <div class="col l7 s7">
+            <h4 class="black-text">Group Name </h4>
+            <h5>Now Showing:</h5>
+            <p>Current Movie Being Discussed</p>
+            <h5>Discussion starts:</h5>
+            <p>MM/DD</p>
           </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+          <div class="col l4 s4 valign-wrapper" id="poster">
+            <img class="responsive-img poster" src="./css/images/suspiria.jpg">
           </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
+        </div>
       </div>
+      </a>
+
     </div>
   </div>
-</div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
