--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link href="css/style.scss" type="text/scss" rel="stylesheet" media="screen,projection" />
+  <link href="../../public/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="../../public/css/styles.css" type="text/scss" rel="stylesheet" media="screen,projection" />
 </head>
 
 <body>
@@ -50,7 +50,7 @@
   </div>
 
   {{{body}}}
-  
+
   <footer class="page-footer orange">
     <div class="footer-copyright">
       Made by <a class="orange-text text-lighten-3">Gold Reel Media</a>
@@ -60,8 +60,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../../public/js/materialize.js"></script>
+  <script src="../../public/js/init.js"></script>
 </body>
 
 </html>
