--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,9 +5,27 @@
   <div class="container">
     <div class="section">
 
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="header title center">Reel Talk</h1>
+      <div class="row center">
+        <h5 class="header col s12">A place for cinephiles to come together and have meaningful discussions on
+          movies, directors and all things cinema</h5>
+      </div>
+      <div class="row center">
+        <a href="http://materializecss.com/getting-started.html" id="login-button" class="btn-large waves-effect waves-light orange">Login
+          to Start Discussing</a>
+      </div>
+      <br><br>
+
+    </div>
+  </div>
       <!--   Movie Club Card   -->
       <ul>
-      {{#each club}}
+      {{#each group}}
+
+      {{!-- discussion-card partial looped over here? --}}
 
       {{/each }}
       </ul>
