--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,15 +4,15 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Starter Template - Materialize</title>
+  <title>Reel Talk</title>
 
   <!-- CSS  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../../public/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link href="../../public/css/styles.css" type="text/scss" rel="stylesheet" media="screen,projection" />
+  <link type="text/css" href="http://localhost:3000/public/css/styles.css">
 </head>
 
-<body>
+<body class="grey darken-4">
   <nav class="red darken-4" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
       <ul class="right hide-on-med-and-down">
@@ -32,22 +32,7 @@
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <br><br>
-      <h1 class="header title center">Reel Talk</h1>
-      <div class="row center">
-        <h5 class="header col s12">A place for cinephiles to come together and have meaningful discussions on
-          movies, directors and all things cinema</h5>
-      </div>
-      <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="login-button" class="btn-large waves-effect waves-light orange">Login
-          to Start Discussing</a>
-      </div>
-      <br><br>
 
-    </div>
-  </div>
 
   {{{body}}}
 
@@ -60,8 +45,7 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../../public/js/materialize.js"></script>
-  <script src="../../public/js/init.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
