--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,12 +51,6 @@ margin-top: 5%;}
   color: #c9252f;
 }
 
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-main {
-  flex: 1 0 auto;
+footer{
+  bottom: 0;
 }
