--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,15 +9,15 @@
   <!-- CSS  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" href="http://localhost:3000/public/css/styles.css">
-</head>
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  </head>
 
 <body class="grey darken-4">
   <nav class="red darken-4" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">My Clubs</a></li>
+        <li><a href="index.handlebars">Home</a></li>
+        <li><a href="club.handlebars">My Clubs</a></li>
         <li><a href="#">New Club</a></li>
         <li><a href="#">Popular</a></li>
       </ul>
