--- a/views/partials/club-card.handlebars
+++ b/views/partials/club-card.handlebars
@@ -1,11 +1,4 @@
-{{!-- 
-VARIABLES USED
-movie club names = movie_club_name
-current movie being discussed = current_movie
-pervious movie discussion = prev_movie 
---}}
-
-<a href="">
+{<a href="#">
     <div class="container current_discussion">
         <div class="row">
             <div class="col l1 s1 offset-1 film-strip"></div>
@@ -18,27 +11,26 @@ pervious movie discussion = prev_movie
             </div>
             <div class="col l4 s4 valign-wrapper" id="poster">
                 {{!-- ?? How to link image from url href ?? --}}
-                <img class="responsive-img poster" src="{{}}">
+                {{!-- <img class="responsive-img poster" src="{{}}"> --}}
             </div>
         </div>
     </div>
 </a>
 
-{{#each }}
 {{!-- Now Showing --}}
-<a href="">
+<a href="#">
     <div class="container current_discussion">
         <div class="row">
             <div class="col l1 s1 offset-1 film-strip"></div>
             <div class="col l7 s7">
-                <h4 class="black-text">{{group.name }} </h4>
+                <h4 class="black-text">{{group.name }} Racial Justice</h4>
                 <h5>Now Showing:</h5>
-                <p>{{discussion.movie}}</p>
+                <p>{{discussion.movie}}THUG</p>
                 <h5>Discussion starts:</h5>
-                <p>{{discussion.start_date}}</p>
+                <p>{{discussion.start_date}}11/29</p>
             </div>
             <div class="col l4 s4 valign-wrapper" id="poster">
-                <img class="responsive-img poster" src="">
+                {{!-- <img class="responsive-img poster" src=""> --}}
             </div>
         </div>
     </div>
@@ -47,7 +39,7 @@ pervious movie discussion = prev_movie
 
 {{!-- Previous Films --}}
 
-<a href="">
+<a href="#">
     <div class="container previous">
         <div class="row">
             <div class="col l1 s1 offset-1 film-strip"></div>
@@ -59,10 +51,8 @@ pervious movie discussion = prev_movie
                 <p>{{prev_movie_start}}</p>
             </div>
             <div class="col l4 s4 valign-wrapper" id="poster">
-                <img class="responsive-img poster" src="">
+                {{!-- <img class="responsive-img poster" src=""> --}}
             </div>
         </div>
     </div>
 </a>
-
-{{/each }}
