been making changes to routes and handlebars files

--- a/views/index-2.handlebars
+++ b/views/index-2.handlebars
@@ -23,13 +23,11 @@
   </div>
       <!--   Movie Club Card   -->
       <ul>
-      {{#each group}}
-
-      {{!-- discussion-card partial looped over here? --}}
-
+      {{#each clubs}}
+      {{>club-card-2}}
       {{/each }}
       </ul>
-      {{>club-card}}
+      
     </div>
   </div>
 
