--- a/views/partials/club-card.handlebars
+++ b/views/partials/club-card.handlebars
@@ -1,3 +1,5 @@
+<!--So, in the club card there shouldn't be any -->
+
 {<a href="#">
     <div class="container current_discussion">
         <div class="row">
