index populates with clubs from DB, clicking on card prints that card's id to the console

--- a/views/partials/club-card-2.handlebars
+++ b/views/partials/club-card-2.handlebars
@@ -1,4 +1,5 @@
-<div class="container current_discussion">
+<!--including clubId in class field so we'll be able to identify which club is bein click -->
+<div class="club container current_discussion" clubId = "{{clubId}}">
         <div class="row">
             <div class="col l1 s1 offset-1 film-strip"></div>
             <div class="col l7 s7">
