click club card to navigate to list of discussions

--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -1,4 +1,4 @@
-<!--including clubId in class field so we'll be able to identify which club is bein click -->
+<!--including discussionId in class field so we'll be able to identify which club is being click -->
 <div class="discussion container current_discussion" discussionId = "{{discussionId}}">
         <div class="row">
             <div class="col l1 s1 offset-1 film-strip"></div>
