--- a/views/club.handlebars
+++ b/views/club.handlebars
@@ -18,3 +18,6 @@
     {{>discussion-card}}
     {{/each }}
     </ul>
+
+<script src="/js/club.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
