--- a/views/partials/club-card-2.handlebars
+++ b/views/partials/club-card-2.handlebars
@@ -2,7 +2,6 @@
 <div class="club container current_discussion" clubId="{{clubId}}">
     <div class="row">
         <div class="col l1 s1 offset-1 film-strip">
-            <img src="/public/images/film.jpg">
         </div>
         <div class="col l7 s7 main-col">
             <h4 class="black-text">{{name}} </h4>
@@ -10,8 +9,10 @@
             <p>{{description}}</p>
         </div>
         <div class="col l4 s4 valign-wrapper" id="poster">
-            {{!-- ?? How to link image from url href ?? --}}
-            {{!-- <img class="responsive-img poster" src="{{}}"> --}}
         </div>
     </div>
+</div>
+
+<div class="post-card">
+    
 </div>
