--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -1,11 +1,10 @@
 <!--including discussionId in class field so we'll be able to identify which club is being click -->
-<div class="discussion container current_discussion" discussionId = "{{discussionId}}">
+<div class="discussion container" discussionId = "{{discussionId}}">
         <div class="row">
-            <div class="col l1 s1 offset-1 film-strip"></div>
-            <div class="col l7 s7">
-                <h4 class="black-text">{{title}} </h4>
-                <h5>Description:</h5>
-                <p>{{text}}</p>
+            <div class="col l12 s10">
+                <h4 class="discussion-title">{{title}} </h4>
+                <h5 class="white-text">Description:</h5>
+                <p class="white-text">{{text}}</p>
             </div>
             <div class="col l4 s4 valign-wrapper" id="poster">
                 {{!-- ?? How to link image from url href ?? --}}
@@ -13,3 +12,7 @@
             </div>
         </div>
     </div>
+
+<ul>
+    {{>post-card }}
+</ul>
