--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Limelight|Righteous');
 
-html{
-  background-color: black;
-}
-
 .icon-block {
   padding: 0 15px;
 }
@@ -17,7 +13,7 @@ body {
 }
 
 nav {
-  box-shadow: 0 5px rgb(255, 255, 255) ;
+  box-shadow: 0 4px rgb(255, 255, 255);
 }
 
 .header {
@@ -48,7 +44,7 @@ nav {
 
 .current_discussion{
   height: auto;
-  border: 2px solid white; 
+  border: 1px solid rgba(255, 255, 255, 0.8); 
   margin-bottom: 2%;
 }
 
@@ -57,9 +53,7 @@ margin-top: 5%;
 }
 
 .film-strip{
-  height: 50px;
-  overflow: auto;
-  background-color: black;
+  background-image: url("/public/images/film.jpg");
 }
 
 .main-col{
@@ -74,6 +68,10 @@ background-color: #d1d2d4;
 #login-button{
   background-color: #ebbb4a;
   color: #c9252f;
+}
+
+.cur_disc_row{
+  margin-bottom: 0;
 }
 
 footer{
