--- a/views/partials/club-card-2.handlebars
+++ b/views/partials/club-card-2.handlebars
@@ -1,7 +1,8 @@
 <!--including clubId in class field so we'll be able to identify which club is bein click -->
 <div class="club container current_discussion" clubId="{{clubId}}">
-    <div class="row">
+    <div class="row cur_disc_row">
         <div class="col l1 s1 offset-1 film-strip">
+            <span></span>
         </div>
         <div class="col l7 s7 main-col">
             <h4 class="black-text">{{name}} </h4>
@@ -14,5 +15,18 @@
 </div>
 
 <div class="post-card">
-    
+
 </div>
+
+{{!-- <div class="club container current_discussion" clubId="{{clubId}}">
+    <div class="row">
+        <div class="col l1 s1 offset-1 film-strip"></div>
+        <div class="col l7 s7">
+            <h4 class="black-text">{{name}} </h4>
+            <h5>Description:</h5>
+            <p>{{description}}</p>
+        </div>
+        <div class="col l4 s4 valign-wrapper" id="poster">
+        </div>
+    </div>
+</div> --}}
