deleting extra pages

--- a/views/club.handlebars
+++ b/views/club.handlebars
@@ -12,7 +12,7 @@
 <div class="prev-films"></div>
 {{!-- to access partial --}}
 {{!-- {{<club-card }} --}} 
-
+HELLO HELP TEST
     <ul>
     {{#each discs}}
     {{>discussion-card}}
