--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -5,7 +5,7 @@
             <div class="col l7 s7">
                 <h4 class="black-text">{{title}} </h4>
                 <h5>Description:</h5>
-                <p>{{text}}</p>
+                <p>discussion-card-partial{{text}}</p>
             </div>
             <div class="col l4 s4 valign-wrapper" id="poster">
                 {{!-- ?? How to link image from url href ?? --}}
