--- a/views/index-2.handlebars
+++ b/views/index-2.handlebars
@@ -13,10 +13,10 @@
         <h5 class="header col s12">A place for cinephiles to come together and have meaningful discussions on
           movies, directors and all things cinema</h5>
       </div>
-      <div class="row center">
+      {{!-- <div class="row center">
         <a href="http://materializecss.com/getting-started.html" id="login-button" class="btn-large waves-effect waves-light orange">Login
           to Start Discussing</a>
-      </div>
+      </div> --}}
       <br><br>
 
     </div>
