--- a/views/partials/club-card-2.handlebars
+++ b/views/partials/club-card-2.handlebars
@@ -2,14 +2,14 @@
 <div class="club container current_discussion" clubId="{{clubId}}">
     <div class="row">
         <div class="col l1 s1 offset-1 film-strip">
-            <img src="/public/images/film.jpg">
+            <img class="film-sidebar">
         </div>
-        <div class="col l7 s7 main-col">
+        <div class="col l8 s8 main-col">
             <h4 class="black-text">{{name}} </h4>
             <h5>Description:</h5> 
             <p>{{description}}</p>
         </div>
-        <div class="col l4 s4 valign-wrapper" id="poster">
+        <div class="col l3 s3 valign-wrapper" id="poster">
             {{!-- ?? How to link image from url href ?? --}}
             {{!-- <img class="responsive-img poster" src="{{}}"> --}}
         </div>
