--- a/views/club.handlebars
+++ b/views/club.handlebars
@@ -1,7 +1,7 @@
 <!--Title-->
-<div class="club-title"></div>
+<div class="club-title">Club Title Here</div>
 <!--description-->
-<div class="club-description"></div>
+<div class="club-description">A short description of what main topics the club will focus on.</div>
 <!--Join Club-->
 <div class="join-club"></div>
 <!--Add Movie Button-->
@@ -12,7 +12,6 @@
 <div class="prev-films"></div>
 {{!-- to access partial --}}
 {{!-- {{<club-card }} --}} 
-HELLO HELP TEST
     <ul>
     {{#each discs}}
     {{>discussion-card}}
