--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -2,12 +2,12 @@
 <div class="discussion container current_discussion" discussionId = "{{discussionId}}">
         <div class="row">
             <div class="col l1 s1 offset-1 film-strip"></div>
-            <div class="col l9 s9">
+            <div class="col l11 s11 disc-col">
                 <h4 class="black-text">{{title}} </h4>
                 <h5>Description:</h5>
-                <p>discussion-card-partial{{text}}</p>
+                <p>{{text}}</p>
             </div>
-            <div class="col l2 s2 valign-wrapper" id="poster">
+            {{!-- <div class="col l2 s2 valign-wrapper" id="poster"> --}}
                 {{!-- ?? How to link image from url href ?? --}}
                 {{!-- <img class="responsive-img poster" src="{{}}"> --}}
             </div>
