--- a/views/partials/discussion-card.handlebars
+++ b/views/partials/discussion-card.handlebars
@@ -6,8 +6,10 @@
             <div class="col l11 s11 disc-col">
                 <h4 class="black-text">{{title}} </h4>
                 <h5>Description:</h5>
-                <p>discussion-card-partial{{text}}</p>
+                <p>{{text}}</p>
 
+
+HI HELLO HAPPY DAY
             </div>
             {{!-- <div class="col l2 s2 valign-wrapper" id="poster"> --}}
                 {{!-- ?? How to link image from url href ?? --}}
@@ -15,7 +17,3 @@
             </div>
         </div>
     </div>
-
-<ul>
-    {{>discussion-card }}
-</ul>
