lot of changes, most recent is new models

--- a/views/partials/post-card.handlebars
+++ b/views/partials/post-card.handlebars
@@ -1,7 +1,6 @@
 <ul>
     <div class="posts">
-{{discussion.user_id }}
-<h4>Are you there</h4>
-{{discussion.text }}
+{{poster}}
+{{text}}
     </div>
 </ul>
