--- a/views/discussion.handlebars
+++ b/views/discussion.handlebars
@@ -1,34 +1,28 @@
-      {{#each }}
+
       
-      <a href="club/{{this.id}}">
+
       <div class="container discussion">
         <div class="row">
           <div class="col l1 s1 offset-1 film-strip"></div>
           <div class="col l7 s7">
-            <h4 class="black-text">Group Name </h4>
+            <h4 class="black-text">Club Name </h4>
             <h5>Now Showing:</h5>
             <p>Current Movie Being Discussed</p>
             <h5>Discussion starts:</h5>
             <p>MM/DD</p>
           </div>
           <div class="col l4 s4 valign-wrapper" id="poster">
-            <img class="responsive-img poster" src="./css/images/suspiria.jpg">
           </div>
         </div>
       </div>
       </a>
 
 
-
-
 {{!-- title, summary --}}
-
-{{this.movie}}
-{{this.movie_plot}}
 
 {{!-- {{discussion posts}} --}}
 
-{{#each }}
+{{#each posts}}
 {{!-- Pretty sure this is incorrect - do we need the post partial since it's only holding a little bit of info? --}}
     {{> partials/post-card }}
 {{/each }}
