basic forms made for new post, new movie discussion and new club

--- a/views/add-club.handlebars
+++ b/views/add-club.handlebars
@@ -1,4 +1,4 @@
-{{!-- Form to add a comment post req to database --}}
+{{!-- Form to add a new club --}}
 <div class="container form_new_club">
   <div class="row">
     <form class="col s12">
