--- a/views/add-movie.handlebars
+++ b/views/add-movie.handlebars
@@ -1,27 +1,40 @@
 
 {{!-- Add a new movie to discuss. This happens when you are already on a club's page. Potentially only for Moderator/Logged In User --}}
 
-<h2>Add a Movie</h2>
+<h2>Add a movie for your club to discuss</h2>
 
 
-<div class="row">
+{{!-- Form to add a new club --}}
+<div class="container form_new_movie">
+  <div class="row">
     <form class="col s12">
-        <div class="row">
-            <div class="input-field col s6">
-                <input placeholder="Hidden Figures" id="newMovie" type="text" class="validate">
-                <label for="first_name">Next Movie to Discuss</label>
-            </div>
-            <div class="input-field col s6">
-                <input type="date" class="datepicker">
-                <label for="discussion_start">Discussion Starts:</label>
-            </div>
+      <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Movie to discuss" id="new_movie" type="text" class="validate">
+          <label for="club_name">Movie Name</label>
         </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <input id="summary" type="text" class="validate">
-                <label for="summary">Plot Summary</label>
-            </div>
+        <div class="input-field col s6">
+          <input placeholder="Title of discussion" id="new_disc" type="text" class="validate">
+          <label for="club_name">Discussion Topics</label>
         </div>
-        <button type="submit">Create Discussion</button>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="textarea1" class="materialize-textarea"></textarea>
+          <label for="new_club_description"> Please  provide a briefdescription of what this club will be focusing on </label>
+        </div>
+      </div>
+      <div class="row">
+          <div class="start-date col l6 s12">Discussion Starts: 
+               <input type="text" class="datepicker">
+          </div>
+          <div class="end-date col l6 s12">Discussion Ends: 
+               <input type="text" class="datepicker">
+          </div>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit" id="add_movie_btn" name="action">Add Movie!
+        <i class="fas fa-video"></i>
+      </button>
     </form>
+  </div>
 </div>
