--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,16 +17,15 @@
   <nav class="red darken-4" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Reel Talk</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="index.handlebars">Home</a></li>
-        <li><a href="club.handlebars">My Clubs</a></li>
-        <li><a href="#">New Club</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="add-club">New Club</a></li>
+        <li><a href="add-movie">New Discussion</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">My Clubs</a></li>
-        <li><a href="#">New Club</a></li>
-
+        <li><a href="/">Home</a></li>
+        <li><a href="add-club">New Club</a></li>
+        <li><a href="add-movie">New Discussion</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
